// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getImageShapeStyles Ensure that ignoreOmit is working 1`] = `
{
  "general": {
    "transform": "scale(1) ",
  },
  "m": {
    "transform": "scale(0.5) ",
  },
  "s": {
    "transform": "scale(1) ",
  },
  "xs": {
    "transform": "scale(1) ",
  },
}
`;

exports[`getImageShapeStyles Ensure that image shape scale is working with responsive 1`] = `
{
  "m": {
    "transform": "scale(0.5) ",
  },
  "s": {
    "transform": "scale(1) ",
  },
  "xs": {
    "transform": "scale(1) ",
  },
}
`;

exports[`getImageShapeStyles Ensure that image shape scale is working with responsive 2`] = `
{
  "general": {
    "transform": "scale(0.5) ",
  },
  "l": {
    "transform": "scale(0.5) ",
  },
  "m": {
    "transform": "scale(1) ",
  },
  "s": {
    "transform": "scale(0.5) ",
  },
  "xl": {
    "transform": "scale(0.5) ",
  },
  "xs": {
    "transform": "scale(0.5) ",
  },
  "xxl": {
    "transform": "scale(0.5) ",
  },
}
`;
